# spezialist

./: CHANGELOG.md  LICENSE  pyproject.toml  readme.md
.github/workflows/: main-branch.yml  release.yml
spezialist/: __init__.py  functions.py
tests/: test_functions.py
